# rustend

./: .gitignore  Cargo.toml  LICENSE  Makefile
app/: .env.local  Cargo.toml  README.md
app/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs
auth/: Cargo.toml  README.md
auth/src/: lib.rs  reset_password.rs  routes.rs  sign_up.rs
auth/src/config/: oauth.rs
auth/src/handler/: devices.rs  forgot_password.rs  login_user.rs  magic_link.rs  mod.rs  oauth.rs  reset_password.rs  sessions.rs  signup_user.rs  two_factor.rs  users.rs
auth/src/models/: magic_link.rs  mod.rs  oauth.rs  reset_password.rs  session.rs  two_factor.rs  user.rs  verification.rs
auth/src/service/: mod.rs  oauth.rs  user.rs
auth/src/store/: mod.rs  oauth_account_store.rs  password_reset_store.rs  session_store.rs  user_store.rs  verification_store.rs
auth/src/store/database/: mod.rs  mongo_oauth_account_store.rs  mongo_password_reset_store.rs  mongo_session_store.rs  mongo_user_store.rs  mongo_verification_store.rs
auth/src/tests/: integration_tests.rs
auth/src/utils/: errors.rs  mod.rs  passwords.rs  session_validation.rs  types.rs
auth/utils/: errors.rs
authentication/: forgot_password.rs  sign_in.rs
authentication/utils/: types.rs
database/: Cargo.toml  README.md
database/src/: init.rs  lib.rs  mongo.rs  mongo.yml  mysql.rs  postgres.rs  sqlite.rs
database/src/utils/: errors.rs  mod.rs  types.rs
middleware/: Cargo.toml  README.md
middleware/src/: cors.rs  jwt.rs  lib.rs  logger.rs  rate_limit.rs  sessions.rs  token_validation.rs
payments/: Cargo.toml  README.md
payments/src/: config.rs  distribution.rs  gateway.rs  lib.rs  subscription.rs  types.rs
payments/src/providers/: airtel.rs  mod.rs  mpesa.rs  paypal.rs  paystack.rs  stripe.rs  tcash.rs  visa.rs
utils/: Cargo.toml  README.md
utils/src/: email.rs  email_templates.rs  encryption.rs  hash.rs  lib.rs  logger.rs  response.rs  signature.rs  sms.rs  token_validation.rs  websocket.rs
