[workspace]
members = [
    "app",
    "auth",
    "database",
    "utils",
    "middleware",
    "payments",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
argon2 = "0.5"
rand_core = "0.6" # For generating random salts for password hashing
actix-service = "2"
tracing = "0.1"
jsonwebtoken = "8"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "env-filter"] }
tracing-appender = "0.2"

# MongoDB async driver
mongodb = { version = "2.8", features = ["tokio-runtime"] }

# Serialization / Deserialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For reading env variables (like DB url, port)
dotenvy = "0.15"

# Async runtime
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
uuid = "1.18.1"
futures-util = "0.3.31"
actix-http = "3.11.1"
bcrypt = "0.17.1"
anyhow = "1.0.100"
base64 = "0.22.1"
rand = "0.8"
sha2 = "0.10.9"
once_cell = "1.21.3"
urlencoding = "2.1.3"