[package]
name    = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true

auth       = { path = "../auth" }
payments   = { path = "../payments" }
database   = { path = "../database" }
utils      = { path = "../utils" }
middleware = { path = "../middleware" }