[package]
name    = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
argon2.workspace = true
bcrypt.workspace = true
signature.workspace = true
sha2.workspace = true
hmac.workspace = true
chrono.workspace = true
urlencoding.workspace = true
